// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button small component should render with custom summaryText color 1`] = `
.c0 {
  color: #212240;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 16px;
  font-weight: bold;
  line-height: 14px;
}

<span
  className="c0"
  color="summaryText"
>
  Lorem ipsum
</span>
`;

exports[`button small component should render with default css properties 1`] = `
.c0 {
  color: #FFFFFF;
  font-family: Avenir Regular,'Avenir Next','Segoe UI', sans-serif;
  font-size: 16px;
  font-weight: bold;
  line-height: 14px;
}

<span
  className="c0"
>
  Lorem ipsum
</span>
`;
